--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mqj-clone",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,5 +20,9 @@
     "path": "^0.12.7",
     "chalk": "^4.1.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/Pumpkinshow/mqj-clone"
+  }
 }
