--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mqj-clone",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,16 +14,16 @@
   "author": "pumpkin",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.0",
     "commander": "^5.1.0",
     "download-git-repo": "^3.0.2",
     "fs": "0.0.1-security",
-    "org": "^0.2.0",
-    "path": "^0.12.7",
-    "chalk": "^4.1.0"
+    "ora": "^4.0.4",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/Pumpkinshow/mqj-clone"
+    "type": "git",
+    "url": "https://github.com/Pumpkinshow/mqj-clone"
   }
 }
